# horse_racing_prediction_v3

./: .env  .gitignore  README.md  all_code_02.py  all_code_05.py  mlflow.db  pyproject.toml  requirements.txt
artifacts/: category_map.pkl  imputation_map.pkl
champion_folder/FLAT_champ_catboost_20251113_200545/: base_model.pkl  calibrator.pkl  feature_selector.pkl  final_feature_names.txt  oot_performance_summary.json
champion_folder/FLAT_champ_catboost_20251113_200545/src/: data_processing.py  feature_engineering.py  feature_selection.py
models/: lgbm_Flat_0028761f70bb42b6aea3b791be03d3e3.pkl  lgbm_Flat_33d9daa0001d446fbfa91c6a09adc777.pkl  lgbm_Flat_3dce2a917d2940118124da2e51bfb89e.pkl  lgbm_Flat_4543f55f801d46bd9b898f504f1fdabf.pkl  lgbm_Flat_5067dc968ca94a03b0fe3cab2ee0db39.pkl  lgbm_Flat_7fb9934413294f588f0550b3039d1f1d.pkl  lgbm_Flat_9eb77c9740c64436a3a823b28ab3dc99.pkl  lgbm_Flat_ca3d23a281614ff5860a2219cb8b5004.pkl  lgbm_Flat_e3471f71a95041d09cca78ee48bbf7b5.pkl  xgb_Flat_7ba1864a1fbb45adaab9801d1b22388f.pkl  xgb_Flat_8a8e1cf3263b4df9b946867b439669ec.pkl
notebooks/: feature_importance.csv
notebooks/production_artifacts/: champion_model_log.csv
src/: 01_data_processing.py  02_feature_engineering.py  03_feature_selection.py  chronological_features.py  data_processing.py  get_predictions.py
src/OLD/: chronological_features_OLD.py  feature_engineering_OLD.py
